# oidc-authkit

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
examples/fastapi_minimal/: main.py
examples/flask_minimal/: main.py
oidc_authkit/: __init__.py
oidc_authkit/adapters/fastapi/: __init__.py  dependencies.py  manager.py  middleware.py  routes.py
oidc_authkit/adapters/flask/: __init__.py  extension.py
oidc_authkit/application/: auth_manager.py  callback_service.py  current_user_service.py  login_service.py  logout_service.py
oidc_authkit/config/: models.py  validator.py
oidc_authkit/domain/: errors.py  interfaces.py  models.py
oidc_authkit/hooks/: events.py
oidc_authkit/infrastructure/oidc/: authlib_client.py
oidc_authkit/infrastructure/session/: cookie_store.py
oidc_authkit/infrastructure/users/: memory_store.py
oidc_authkit/infrastructure/utils/: urls.py
oidc_authkit/permissions/: requirements.py
oidc_authkit/protocol/: claims.py  nonce.py  oidc_client.py  state.py
tests/integration/: test_fastapi.py  test_flask.py
tests/unit/: test_claims.py  test_config.py  test_domain_models.py  test_permissions.py  test_redirect.py  test_session_store.py  test_state_nonce.py  test_user_store.py
