[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oidc-authkit"
version = "0.1.0"
description = "A universal Python authentication package for OIDC integration with Authelia"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "oidc-authkit contributors" },
]
dependencies = [
    "pydantic>=2.0",
    "authlib>=1.3",
    "httpx>=0.25",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100",
    "starlette>=0.27",
]
flask = [
    "flask>=3.0",
]
sqlalchemy = [
    "sqlalchemy>=2.0",
]
redis = [
    "redis>=5.0",
]
all = [
    "oidc-authkit[fastapi,flask,sqlalchemy,redis]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.25",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
